Fixed Canvas alignment

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,9 +1,11 @@
+
 .solar {
   width: 100vw;
   height: 100vh;
   padding: 0;
   margin: 0;
-  background-color: black;
+  background-color:black;
+  
 }
 
 .solar__content-welcome {
@@ -13,16 +15,13 @@
 }
 
 .solar__content__holder {
-  /* background: rgb( 255, 255, 255, 0.012 ); */
-  /* box-shadow: 0px 8px 32px 0 rgba( 0, 0, 0, 0.25 ); */
-  /* backdrop-filter: blur(25px); */
   padding: 0px 16px 16px 16px;
-  /* border-radius: 16px; */
   font-family: sans-serif;
-  width:95vw;
+  width: 75vw;
   height: 80vh;
   display: flex;
-  justify-content: space-between;
+
+  justify-content: center;
   align-items: center;
   flex-direction: column;
   position: absolute;
@@ -38,9 +37,9 @@
   margin-right: 2rem;
 }
 
-.gradient__text {
+/* .gradient__text {
   background: var( --gradient-text );
   background-clip: text;
   -webkit-background-clop: text;
   -webkit-text-fill-color: transparent;
-}
+} */
